<resources>
    <string name="app_name" translatable="false">Lab3</string>
    <string name="enter_your_email_address">Enter your email address"</string>
    <string name="Type_email_here">Type email here</string>
    <string name="type_your_password">Type your password</string>
    <string name="login">Login</string>
    <string name="email_address">""</string>
    <string name="password">password</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture</string>
    <string name="button3">Take a picture</string>
    <string name="take_a_picture">Click the button above to take a picture</string>
    <string name="button4">Go to chat</string>
    <string name="sent_button">Sent</string>
    <string name="type_here">Type here</string>
    <string name="receive_button">Receive</string>
    <string name="weatherforecast">Launch weathercast</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>