<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
      android:id="@+id/refresher"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ListView
        android:id="@+id/theListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
    </ListView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/receive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/receive_button" />


        <EditText
            android:id="@+id/edit"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_here"
            android:layout_gravity="bottom"
            android:inputType="text" />

        <Button
            android:id="@+id/sent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/sent_button" />

    </LinearLayout>
</RelativeLayout>




